apps/ws-bccmusic-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-bccmusic-api
  namespace: bccmusic-api
  labels:
    app: ws-bccmusic-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-bccmusic-api
  template:
    metadata:
      labels:
        app: ws-bccmusic-api
      annotations:
        redeploy: "2026-04-04-v1"
    spec:
      containers:
        - name: backend
          image: ghcr.io/akkercheval/ws-bccmusic-api:sha-cf01668c52854f097446b11f6d09c41dd15e9573
          imagePullPolicy:
            Always
            # Auto-updated by CI on 9bb36785eb44e4a8546df7fd583c595e9f86902f (build #29)
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 120 # was 10s
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 600 # was 10s
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10

          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]
