apps/ws-bccmusic-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-bccmusic-api
  namespace: bccmusic-api
spec:
  selector:
    app: ws-bccmusic-api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
