apps/ws-bccmusic-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-bccmusic-api
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.bccmusic.boonecountyin.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ws-bccmusic-api
                port:
                  number: 8080
